# TRON

./: .env.example  .gitignore  .tmp_patch_notice.txt  .tron_worker_auth.json  DEPLOYMENT_PARTNER_README.md  Dockerfile.server  Dockerfile.worker  LAUNCH_READY.md  PATCH_LOG.md  PRODUCTION_READY.md  PRODUCTION_RELEASE_READY.md  Procfile  QUICKSTART.md  QUICK_REFERENCE.py  README.md  RELEASE_NOTES_v0.1.3.md  RENDER_DEPLOYMENT.md  SECURITY_CHECKLIST.md  TRON_DePIN_ARCHITECTURE.md  TRON_UNIFIED_INTEGRATION.md  USER_GUIDE.md  VALIDATION_COMPLETE.md  VGPU_GATEWAY_GUIDE.md  _temp_patch_note.txt  add_platform_endpoint.py  contine_notebook.ipynb  debug_sim.py  demo_fintech_magic.py  docker-compose.vgpu.yml  docker-compose.yml  e2e_test.py  examples_vgpu_gateway_client.py  extract_dashboard.py  final_integration_test.py  install_tron.py  install_tron.sh  integration_test_royalty.py  live_proof_tron.py  live_simulation.py  load_shaper.py  (+34 more)
.github/workflows/: publish-to-pypi.yml  python-tests.yml  release-to-github.yml
TRON-II/: ADAPTER_README.md  README.md  demo_outcome_feedback.py  pyproject.toml  requirements-sb3.txt  tron_artifacts.json  tron_outcomes.json
TRON-II/examples/: orchestrator_demo.py
TRON-II/tests/: test_adapters.py  test_cli.py  test_depin.py  test_hybrid_integrator.py  test_orchestrator.py  test_outcomes.py  test_policy.py  test_ray_adapter.py  test_registry_persistence.py  test_sb3_integration.py  test_transformers_adapter.py  test_tron_ii.py
TRON-II/tron_ii/: __init__.py  cli.py  depin.py  hybrid.py  manager.py  mission.py  module.py  orchestrator.py  utility.py
TRON-II/tron_ii/adapters/: __init__.py  ray_adapter.py  sb3_adapter.py  sb3_example.py  transformers_adapter.py
dashboard/: Dockerfile  app.py
docs/: index.md
examples/: README.md  simple_inference.py
runtime_stubs/: auto_scaler.py  global_brain.py  market_engine.py  predictor_engine.py  queue_server.py  routing_engine.py  session_manager.py  simulation_engine.py
tests/: run_installer_bootstrap.py  test_billing_api.py  test_billing_summary.py  test_enterprise_api.py  test_enterprise_core.py  test_launch_context.py  test_openai_bridge.py  test_payment_providers.py  test_vgpu_gateway_integration.py
tron/: __init__.py  magic_future.py  remote.py
tron/_runtime/: __init__.py  autoscaler.py  client.py  core.py  dag.py  decorators.py  future.py  object_store.py  pipeline.py  remote.py  runtime.py  scheduler.py  sdk.py  serializer.py  stream.py  task.py  tron.py  worker_runtime.py
tron/gpu/: __init__.py  client.py  cluster.py  manager.py  orchestrator.py  runtime.py  worker.py
tron/orchestrator/: __init__.py  outcomes.py  policy.py  registry.py  substrate.py
tron_runtime/: execution_graph.py  pricing_engine.py  streaming_fallback.py  swarm_manager.py
vgpu/: README.md  demo.py  diagnostic.ipynb  openai_bridge.py  scheduler.py
