[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tron-client-py"
version = "0.1.5"
description = "Distributed Python compute orchestration for AI teams: self-hosted task execution, model scoring, inference, and remote function dispatch."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "TRON" }
]

keywords = [
    "tron", "distributed-computing", "distributed-python", "task-orchestration",
    "parallel-processing", "ai-infrastructure", "model-scoring", "inference",
    "remote-task-execution", "self-hosted", "on-premise-compute", "python-sdk",
    "data-science", "machine-learning", "batch-inference", "workflow-automation",
    "ray-alternative", "celery-alternative"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi==0.125.0",
    "uvicorn==0.49.0",
    "requests==2.32.0",
    "cloudpickle==3.0.0",
    "pydantic>=2.0.0,<2.5",
    "streamlit==1.58.0",
    "pandas==3.0.3",
    "numpy>=2.3.3,<3",
    "streamlit-autorefresh==1.0.1",
]

[project.urls]
Homepage = "https://github.com/StarkX-cloud/tron-client"
Repository = "https://github.com/StarkX-cloud/tron-client"
Tracker = "https://github.com/StarkX-cloud/tron-client/issues"
"Enterprise Support" = "https://tally.so/r/Bz6Lg7"

[tool.setuptools]
py-modules = [
    "tron_sdk",
    "job",
    "queue_server",
    "worker",
    "master_scheduler",
    "tron_enterprise_core",
    "tron_worker_daemon",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tron*", "tkron*", "tron_runtime*"]

[project.scripts]
tron = "tron.cli:main"
tron-master = "master_scheduler:main"
tron-worker = "tron_worker_daemon:main"
