[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tron-ii"
version = "0.1.0"
description = "TRON-II: adaptive training intelligence layer for capability-efficient AI training."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "TRON" }
]
keywords = [
    "tron", "training-intelligence", "adaptive-training", "compute-efficiency",
    "training-optimization", "artifact-reuse", "substrate-routing", "ai-infrastructure"
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/StarkX-cloud/tron-client"
Repository = "https://github.com/StarkX-cloud/tron-client"
Tracker = "https://github.com/StarkX-cloud/tron-client/issues"

[tool.setuptools]
packages = ["tron_ii", "tron_ii.adapters"]

[project.scripts]
tron-ii = "tron_ii.cli:main"
